Externalized HTTP communication from JrdsDataAdapter into an abstract parent class to make reusable.